# AlmondAI

./: .gitignore  AlmondAI.sln  CMakeLists.txt  README.md  training_prompts.json
AlmondAI/ai chat interface html/: lmstudio_client.html
AlmondAI/docs/: CONSOLE_COMMANDS.md  CONSOLE_HELP.md  DATA_FORMATS.md  GPT_SETUP.md  LLM_OVERVIEW.md  LLM_OVERVIEW.txt  TEACHER_BACKENDS.md  architecture.md  lmstudio_client.html
AlmondAI/docs/data-schemas/: retrieval_index.schema.json  student_weights.schema.json  training_sample.schema.json
AlmondAI/include/almondai/: adapter.hpp  autopilot.hpp  buildparse.hpp  eval.hpp  fallback.hpp  governor.hpp  ingest.hpp  mcp.hpp  model.hpp  model_config.hpp  optim_adamw.hpp  retrieval.hpp  retrieval_refresh.hpp  scheduler.hpp  serve.hpp  tokenizer_bpe.hpp  tokenizer_coordinator.hpp  tokenizer_word.hpp  train.hpp  trainer.hpp
AlmondAI/include/almondai/chat/: backend.hpp
AlmondAI/include/almondai/net/: http.hpp
AlmondAI/src/: LLM_OVERVIEW.txt  adapter.cpp  autopilot.cpp  buildparse.cpp  eval.cpp  fallback.cpp  governor.cpp  ingest.cpp  json.cpp  main.cpp  mcp.cpp  model.cpp  model_config.cpp  optim_adamw.cpp  retrieval.cpp  retrieval_refresh.cpp  scheduler.cpp  serve.cpp  tensor.cpp  tokenizer_bpe.cpp  tokenizer_coordinator.cpp  tokenizer_word.cpp  train.cpp  trainer.cpp
AlmondAI/src/chat/: backend.cpp
AlmondAI/src/net/: http.cpp
AlmondShell/: Engine.vcxitems  Engine.vcxitems.filters  vcpkg.json
AlmondShell/docs/: file_structure.txt
AlmondShell/examples/AlmondAIEngine/: AlmondAIEngine.cpp  AlmondAIEngine.vcxproj  AlmondAIEngine.vcxproj.filters
AlmondShell/examples/AlmondAIRuntime/: AlmondAIRuntime.vcxproj  data.txt  main.cpp
AlmondShell/examples/AlmondAIRuntime/data/: english.txt  retrieval_index.json  seed.txt  student_weights.json  training_data.jsonl  training_log.txt  training_seed.jsonl  vocab.txt
AlmondShell/include/: aengineconfig.hpp  aui.hpp
AlmondShell/unix/: readme.html
Changes/: changelog.txt  roadmap.txt
data/: data.txt  english.txt  training_log.csv  training_seed.jsonl
include/almondai/: adapter.hpp  buildparse.hpp  eval.hpp  governor.hpp  ingest.hpp  json.hpp  mcp.hpp  model.hpp  retrieval.hpp  serve.hpp  tensor.hpp  tokenizer_word.hpp  train.hpp
src/: adapter.cpp  buildparse.cpp  eval.cpp  governor.cpp  ingest.cpp  main.cpp  mcp.cpp  model.cpp  retrieval.cpp  serve.cpp  tensor.cpp  tokenizer_word.cpp  train.cpp
